Fix saved filter list z-index

--- a/ui/v2.5/src/index.scss
+++ b/ui/v2.5/src/index.scss
@@ -660,7 +660,6 @@ div.react-select__menu,
 div.dropdown-menu {
   background-color: $secondary;
   color: $text-color;
-  z-index: 1600;
 
   .react-select__option,
   .dropdown-item {
